Bug 164130 - LibreOffice Calc crashes when doing a lookup in a sheet with a space in its name
Summary: LibreOffice Calc crashes when doing a lookup in a sheet with a space in its name
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.7.2 release
Hardware: All All
: medium normal
Assignee: Henry Castro
URL:
Whiteboard: target:25.8.0 target:24.8.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cell-Selection
  Show dependency treegraph
 
Reported: 2024-12-02 18:33 UTC by Johannes
Modified: 2025-01-24 14:04 UTC (History)
8 users (show)

See Also:
Crash report or crash signature: ["ScOutputData::DrawRefMark(short,long,short,long,Color const &,bool)"]


Attachments
Example file (13.81 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-12-02 18:33 UTC, Johannes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes 2024-12-02 18:33:02 UTC
Description:
LibreOffice Calc crashes when doing a lookup in a sheet with a space in its name.

Steps to Reproduce:
1. Open attached file.
2. Select cell C1 and click on fx to add an formula.
3. Select formula vlookup: search for A1, matrix is 'test blad'.A:A, index is 0 (like cell B1)

Actual Results:
After selecting the matrix and clicking in the field for filling in the matrix, LibreOffice crashes.

Expected Results:
Not crashing.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
- LibreOffice doesn't crash when the space in the sheet name has been removed.
- LibreOffice doesn't crash when filling in the formula directly in the cell.
- This does also concerns for example the formula xlookup
Comment 1 Johannes 2024-12-02 18:33:36 UTC
Created attachment 197903 [details]
Example file
Comment 2 m_a_riosv 2024-12-02 22:03:18 UTC
Reproducible
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0f3f3710280d2476425bb86bc2e065e3e7a82952
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Latest version that works on the ones I have installed.
Version: 7.6.7.2 (X86_64) / LibreOffice Community
Build ID: dd47e4b30cb7dab30588d6c79c651f218165e3c5
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded


Not the same but maybe relative.
https://bugs.documentfoundation.org/show_bug.cgi?id=60385
Comment 3 raal 2024-12-04 19:07:56 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.2.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 51300b72890dd47ee27661f16df4360d78d60e3d is the first bad commit
commit 51300b72890dd47ee27661f16df4360d78d60e3d
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Aug 10 21:34:06 2023 +0200

    source e4e080086e76a0bedd7ce62dc610889dc5c86401

155483: tdf#155799: sc: fix paint the reference mark | https://gerrit.libreoffice.org/c/core/+/155483
Comment 4 Tomaz Vajngerl 2024-12-21 05:43:38 UTC
I'm not the author of that patch, why is it marked as regression by me?
Comment 5 Johannes 2024-12-21 15:18:01 UTC
Henry Castro, could you please take a look at this one?
Comment 6 Henry Castro 2024-12-23 12:35:56 UTC
Yes, I will work to fix it. Thanks
Comment 7 Henry Castro 2024-12-30 10:55:29 UTC
Resolved 

https://gerrit.libreoffice.org/c/core/+/179563
Comment 8 Commit Notification 2025-01-07 16:20:02 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c0392315ba3691f55ddbcf205544c21f019a9b6a

tdf#164130: ensure valid column and row values

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-01-08 08:41:27 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8e250191dfabc8e1396170399facce5562b248f9

tdf#164130: ensure valid column and row values

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Johannes 2025-01-15 16:48:28 UTC
Tested in version 25.8.0.0.alpha0+
Calc doesn't crash anymore when doing a lookup.