tdf#164130: ensure valid column and row values

Sometimes the range mark has not valid col/row values.

Signed-off-by: Henry Castro <hcastro@collabora.com>
Change-Id: I29cf70c8c2a4e832f1ee65abac0ff55e49295fc1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179897
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 289667abb3bcf165402f4f5c10af91ec59b0d26f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179916
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 8e250191dfabc8e1396170399facce5562b248f9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180708
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>